basic layout and tinkering

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,19 @@
     <title>To-Do List</title>
 </head>
 <body>
+    <nav style="">
+        <ul><button id="projectBTN">Add New Project</button></ul>
+        <ul><button>Add New Task</button></ul>
+        <ul><button></button></ul>
+    </nav>
+    <div id="main-container">
+        <aside>
+            <ul><div>Task</div></ul>
+        </aside>
+        <div id="content">
+
+        </div>
+    </div>
     
 </body>
 </html>
